--- a/code/server/.env
+++ b/code/server/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:2NpELNl4XI8vg9OaitIPh9nOx1IY1RcWmXbaHXmLjOU=
+APP_KEY=base64:KMkZwhuCPcgT+EFK19hFfbIPW3l2kSRrE0EkRVgLmZw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -47,6 +47,6 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
-
+SANCTUM_STATEFUL_DOMAINS=127.0.0.1:3000
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
