--- a/code/server/.env
+++ b/code/server/.env
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=mt1
 SANCTUM_STATEFUL_DOMAINS=127.0.0.1:3000
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+AUTH_COOKIE_NAME=boost_me
